--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <p>Rock, paper, scissors with interface</p>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
 </body>
 </html>
