Added basic score functionality

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src = "script.js"></script>
+    <script defer src = "script.js"></script>
 </head>
 <body>
     <p>Rock, paper, scissors with interface</p>
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <button id="btn-rock">Rock</button>
+    <button id="btn-paper">Paper</button>
+    <button id="btn-scissors">Scissors</button>
+    <div id ="score">Score</div>
 </body>
 </html>
