Added basic css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script defer src = "script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Rock, paper, scissors with interface</p>
-    <button id="btn-rock">Rock</button>
-    <button id="btn-paper">Paper</button>
-    <button id="btn-scissors">Scissors</button>
-    <div id ="score">Score</div>
+    <p id="title">Rock, paper, scissors with interface</p>
+    <div id="game">
+        <div id="buttons">
+            <button id="btn-rock">Rock</button>
+            <button id="btn-paper">Paper</button>
+            <button id="btn-scissors">Scissors</button>
+        </div>
+        <div id="score-box">
+            <div id="score-text">Score:</div>
+            <div id="score">0:0</div>
+        </div>
+    </div>
+    <footer>Created by DarthKotlet - wsadzić link do githuba</footer>
 </body>
 </html>
