Added some initial color ideas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>Jakiś fajny tekst w nagłówku</header>
     <p id="title">Rock, paper, scissors with interface</p>
     <div id="game">
         <div id="buttons">
