Added alert functionality

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
             <button id="btn-scissors">Scissors</button>
         </div>
         <div id="score-box">
-            <div id="score-text">Score:</div>
-            <div id="score">0:0</div>
+            <div id="score-text">Score&nbsp;</div>
+            <div id="score">
+                <div id="score-player">0</div>
+                :
+                <div id="score-computer">0</div>
+            </div>
         </div>
+        <div id="alert"></div>
     </div>
     <footer>Created by DarthKotlet - wsadzić link do githuba</footer>
 </body>
