Extended logic to lizard and spock, added icons

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <header>Jakiś fajny tekst w nagłówku</header>
-    <p id="title">Rock, paper, scissors with interface</p>
+    <p id="title">Let's play rock, paper, scissors, lizard, spock</p>
     <div id="game">
         <div id="buttons">
-            <button id="btn-rock">Rock</button>
-            <button id="btn-paper">Paper</button>
-            <button id="btn-scissors">Scissors</button>
+            <button id="btn-rock"><img src="images/rock.png"></button>
+            <button id="btn-paper"><img src="images/paper.png"></button>
+            <button id="btn-scissors"><img src="images/scissors.png"></button>
+            <button id="btn-lizard"><img src="images/lizard.png"></button>
+            <button id="btn-spock"><img src="images/spock.png"></button>
         </div>
         <div id="score-box">
             <div id="score-text">Score&nbsp;</div>
