--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Jakiś fajny tekst w nagłówku</header>
-    <p id="title">Let's play rock, paper, scissors, lizard, spock</p>
+    <header>Rock, paper, scissor, lizard, spock</header>
+    <p id="title">Make your choice</p>
     <div id="game">
         <div id="buttons">
+            <!-- Images stolen from https://www.pngegg.com/pl/png-iiamd -->
             <button id="btn-rock"><img src="images/rock.png"></button>
             <button id="btn-paper"><img src="images/paper.png"></button>
             <button id="btn-scissors"><img src="images/scissors.png"></button>
