Added animations and further improvements to displaying winner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>Rock, paper, scissor, lizard, spock</header>
-    <p id="title">Make your choice</p>
+    <p id="title">Make your choice!</p>
     <div id="game">
         <div id="buttons">
             <!-- Images stolen from https://www.pngegg.com/pl/png-iiamd -->
@@ -30,6 +30,6 @@
         </div>
         <div id="alert"></div>
     </div>
-    <footer>Created by DarthKotlet - wsadzić link do githuba</footer>
+    <footer>Created by <a href="https://github.com/michalszkil">Michał Szkil</a></footer>
 </body>
 </html>
