--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Rock, paper, scissor, lizard, spock</header>
-    <p id="title">Make your choice!</p>
+    <header>Live long and prosper</header>
+    <p id="title">Make your choice!<br>
+    First to five wins!</p>
     <div id="game">
         <div id="buttons">
             <!-- Images stolen from https://www.pngegg.com/pl/png-iiamd -->
