Added highlighting of computer's choice

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div id="game">
         <div id="buttons">
             <!-- Images stolen from https://www.pngegg.com/pl/png-iiamd -->
-            <button id="btn-rock"><img src="images/rock.png"></button>
-            <button id="btn-paper"><img src="images/paper.png"></button>
-            <button id="btn-scissors"><img src="images/scissors.png"></button>
-            <button id="btn-lizard"><img src="images/lizard.png"></button>
-            <button id="btn-spock"><img src="images/spock.png"></button>
+            <button id="btn-rock"><img id="btn-rock-img" src="images/rock.png"></button>
+            <button id="btn-paper"><img id="btn-paper-img" src="images/paper.png"></button>
+            <button id="btn-scissors"><img id="btn-scissors-img" src="images/scissors.png"></button>
+            <button id="btn-lizard"><img id="btn-lizard-img" src="images/lizard.png"></button>
+            <button id="btn-spock"><img id="btn-spock-img" src="images/spock.png"></button>
         </div>
         <div id="score-box">
             <div id="score-text">Score&nbsp;</div>
