Added a link to game rules

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div id="alert"></div>
     </div>
+    <a href="https://bigbangtheory.fandom.com/wiki/Rock,_Paper,_Scissors,_Lizard,_Spock"><p id="rules">Rules</p></a>
     <footer>Created by <a href="https://github.com/michalszkil">Michał Szkil</a></footer>
 </body>
 </html>
